# guvercin-desktop

./: .gitignore  CONTEXT_MENU_SETUP.md  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
frontend/: package-lock.json  package.json
frontend/public/fonts/: README.md
frontend/src/: App.jsx  fonts.css  i18n.js  index.css
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/components/: CalendarSection.css  CalendarSection.jsx  ComposeMailContent.jsx  ComposeView.css  ComposeView.jsx  ContactsSection.css  ContactsSection.jsx  LanguageSelector.css  LanguageSelector.jsx  MailHeadersPanel.jsx  MailWorkspace.jsx  TodoSection.css  TodoSection.jsx
frontend/src/context/: OfflineSyncContext.jsx
frontend/src/pages/: AccountSelectionPage.css  AccountSelectionPage.jsx  AccountSettingsPage.css  AccountSettingsPage.jsx  DashboardPage.css  DashboardPage.jsx  (+14 more)
rust-backend/: Cargo.toml
rust-backend/src/: avatar.rs  avatar_routes.rs  caldav_sync.rs  calendar_routes.rs  contacts_routes.rs  crypto.rs  db.rs  google_sync.rs  i18n.rs  imap_client.rs  imap_session.rs  imap_utf7.rs  lib.rs  mail_models.rs  mail_routes.rs  main.rs  models.rs  oauth.rs  oauth_routes.rs  offline_routes.rs  routes.rs  security_routes.rs  smtp_send.rs  sync_reconcile.rs  todo_routes.rs
rust-backend/src/keystore/: mod.rs
scripts/: register-context-menu-linux.sh  register-context-menu-macos.sh  register-context-menu-windows.ps1
(+85 files in other folders)
