[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "chrono"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
thiserror = "1.0"
dotenvy = "0.15"
native-tls = "0.2"
anyhow = "1.0"
imap = "2.4"
mailparse = "0.15"
tiny_msg = "0.2.0"
dirs = "6.0"
chrono = "0.4"
base64 = "0.22"
chacha20poly1305 = "0.10"
hkdf = "0.12"
libsqlite3-sys = { version = "0.27", features = ["bundled-sqlcipher"] }
rand = "0.8"
zeroize = "1.7"
lettre = { version = "0.11.19", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }
# Avatar resolution deps
md5 = "0.7"
sha2 = "0.10"
scraper = "0.20"
hex = "0.4"
once_cell = "1.18"
# Open the system browser for the Google OAuth loopback flow
open = "5.3"


